# Battle-Sity

./: CMakeLists.txt
res/shaders/: fragment.txt  vertex.txt
src/: main.cpp
src/renderer/: Sprite.cpp  Sprite.h  Texture2d.cpp  Texture2d.h  shaderProgram.cpp  shaderProgram.h
src/resources/: ResourceManager.cpp  ResourceManager.h
